Major CSS Changes: - Put shared styles into a general "styles.css" - Made all colours into css variables - Added some support for mobile screen sizes - General style improvements - Fixed the bug with the button/link wrapping - Made page buttons/text inline

--- a/nginx/root/static/css/animals.css
+++ b/nginx/root/static/css/animals.css
@@ -1,81 +1,7 @@
-/* Fancy background image*/
-:root {
-    background-image: url("../img/NPLB-Background.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-body {
-    padding: 0;
-    margin: 0;
-}
-
 a {
-    color: black;
+    color: var(--main-text-colour);
     font-weight: bold;
     text-decoration: none;
-}
-
-/* Application logo styling */
-header>div>img {
-    margin: 0.5em;
-}
-
-header>#company {
-    display: flex;
-    align-items: center;
-    margin-right: auto;
-    color: #8e2e0b;
-    font-size: 3em;
-}
-
-header>div>a {
-    font-size: 1.5em;
-    color: #000000;
-    margin-right: 2em;
-    padding: 0.25em;
-    text-decoration: none;
-    transition: color 0.4s;
-    font-weight: normal;
-}
-
-header>div>a:hover {
-    color: gray;
-}
-
-/* Flexbox header and styling for logo image and buttons */
-body>header {
-    background-color: #ffffff;
-    display: flex;
-    justify-content: flex-end;
-    flex-wrap: wrap;
-    align-items: center;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 80vh;
-}
-
-main>div {
-    margin: 2em 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #ffffff;
-    min-width: 25%;
-    padding: 2em;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-main>.flashes {
-    margin: 0.5em 0;
-    padding: 0em;
 }
 
 form {
@@ -84,99 +10,71 @@ form {
     justify-content: space-around;
     align-items: center;
     margin: 0.25em;
-    /* flex-grow: 1;
-    background-color: #ffffff;
-    height: auto;
-    width: 25em;
-    padding: 2em;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+    width: 80%;
 }
 
-select {
-    background-attachment: #ffffff;
-    color: black;
-    border: 1px solid #000000;
-    box-sizing: border-box;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-    background-color: #fff;
-    background-image: url('../img/arrow-down.png');
-    background-repeat: no-repeat, repeat;
-    background-position: right .7em top 50%, 0 0;
-    background-size: .65em auto, 100%;
+form:nth-child(2) {
+    flex-direction: row;
+    justify-content: center;
 }
 
-select:after {
-    content: "";
-    border: 6px solid transparent;
-}
 
-form div {
+form>div {
     margin: 0.25em;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form>div>div {
+    display: flex;
+    flex-direction: row;
+    white-space: nowrap;
+}
+
+form:nth-child(2) *,
+form div * {
+    margin: 0 0.5em;
 }
 
 form div>label {
     font-size: initial;
-    margin-bottom: 0.25em;
 }
 
 form div>input {
-    color: black;
-    border: 1px solid #000000;
+    color: var(--main-text-colour);
+    border: 1px solid var(--main-dark-colour);
     box-sizing: border-box;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px var(--drop-shadow-colour);
 }
 
 form div>[type=radio] {
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-    align-self: flex-end;
-}
-
-#button {
-    margin: 2em 0em;
-}
-
-button, #button>a {
-    padding: 0.5em 2em;
-    align-self: center;
-    color: black;
-    font-weight: normal;
-    text-decoration: none;
-    background-color: #b3cfd1;
-    border: none;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    cursor: pointer;
-    transition: background-color 0.4s;
-}
-
-button:hover, #button>a:hover{
-    background-color: pink;
+    box-shadow: 0 0 0 0 var(--drop-shadow-colour);
 }
 
 table {
     border-collapse: collapse;
     width: 95%;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid var(--main-dark-colour);
     margin-top: 2em;
 }
 
 th {
-    border-bottom: 1px solid #000000;
+    border-bottom: 1px solid var(--main-dark-colour);
 }
 
 tr {
     margin: 0;
+    background-color: var(--row-colour-1);
 }
 
 tr:nth-child(even) {
-    background-color: #c5c5c5;
+    background-color: var(--row-colour-2);
 }
 
 tr:hover {
-    background-color: #b3cfd1;
+    background-color: var(--row-colour-hover);
     cursor: pointer;
     transition: background-color 0.4s;
 }
@@ -184,9 +82,15 @@ tr:hover {
 td {
     padding: 0.25em;
     text-align: center;
-    border: pink;
 }
 
-#newAnimal {
-    margin-left: auto;
+@media (max-width: 700px) {
+    table {
+        width: 100%;
+    }
+
+    form>div {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
